// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Description/DescriptionList Description List 1`] = `
<dl
  className="description-list"
>
  <dt
    className="description-list__term description-list__term--single"
    description="Its Description"
  >
    Term
  </dt>
  <dd
    className="description-list__description description-list__description--single"
    description="Its Description"
  >
    Its Description
  </dd>
</dl>
`;

exports[`Storyshots Description/DescriptionList List 1`] = `
<dl
  className="description-list"
>
  <dt
    className="description-list__term description-list__term--single"
    description="Its Description"
  >
    Term 1
  </dt>
  <dd
    className="description-list__description description-list__description--single"
    description="Its Description"
  >
    Its Description
  </dd>
  <dt
    className="description-list__term description-list__term--single"
    description="Its Description"
  >
    Term 2
  </dt>
  <dd
    className="description-list__description description-list__description--single"
    description="Its Description"
  >
    Its Description
  </dd>
  <dt
    className="description-list__term description-list__term--single"
    description="Its Description"
  >
    Term 3
  </dt>
  <dd
    className="description-list__description description-list__description--single"
    description="Its Description"
  >
    Its Description
  </dd>
  <dt
    className="description-list__term description-list__term--single"
    description="Its Description"
  >
    Term 4
  </dt>
  <dd
    className="description-list__description description-list__description--single"
    description="Its Description"
  >
    Its Description
  </dd>
</dl>
`;

exports[`Storyshots Description/DescriptionList List With Multiple Descriptions 1`] = `
<dl
  className="description-list"
>
  <dt
    className="description-list__term description-list__term--single"
  >
    Term 1
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    Its First Description
  </dd>
  <dt
    className="description-list__term description-list__term--single"
  >
    Term 2
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    Its First Description
  </dd>
  <dt
    className="description-list__term description-list__term--multi"
  >
    Term 3
  </dt>
  <dd
    className="description-list__description description-list__description--multi"
  >
    <div>
      Its First Description
    </div>
  </dd>
  <dd
    className="description-list__description description-list__description--multi"
  >
    <div>
      Its Second Description
    </div>
  </dd>
  <dt
    className="description-list__term description-list__term--single"
  >
    Term 4
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    Its First Description
  </dd>
</dl>
`;
